--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;400;500;700&display=swap');
 * {
   margin: 0;
   padding: 0;
-  font-family: "poppins", Arial, Helvetica, sans-serif;
+  font-family: 'Karla', sans-serif;
 
   text-decoration: none;
   color: #000;
